--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -1,55 +1,55 @@
 {% extends "shop/base.html" %}
 {% load static %}
 
-{% block title %} Your shopping cart {% endblock %}
+{% block title %} Ваша корзина {% endblock %}
 
 {% block content %}
-  <h1>Your shopping cart</h1>
-    <table class="cart" cellpadding="15" cellspacing="0"   align="center"  >
-      <thead >
+  <h1>Ваша корзина</h1>
+  <table class="cart"  cellpadding="15" cellspacing="0" width="100%"    align="center"  >
+      <thead>
         <tr >
-          <th>Image</th>
-          <th>Product</th>
-          <th>Quantity</th>
-          <th>Remove</th>
-          <th>Unit price</th>
-          <th>Price</th>
+          <th>Изображение</th>
+          <th>Продукт</th>
+          <th>Количество</th>
+          <th>Очистить</th>
+          <th>Цена за еденицу</th>
+          <th>Цена</th>
         </tr>
       </thead>
-      <tbody>
-      {% for item in cart %}
-        {% with product=item.product %}
-          <tr class="body">
-            <td>
-              <a href="{{ product.get_absolute_url }}">
-                <img src="{% if product.image %}{{ product.image.url }}
-                            {% else %} {% static '#' %}{% endif %}">
-              </a>
-            </td>
-            <td>{{ product.name }}</td>
-            <td>
-             <form action="{% url 'cart:cart_add' product.id %}" method="post">
-                  {{ item.update_quantity_form.quantity }}
-                  {{ item.update_quantity_form.update }}
-                  <input type="submit"  value="Update">
-                  {% csrf_token %}
-              </form>
-            </td>
-            <td><a href="{% url 'cart:cart_remove' product.id %}">Remove</a></td>
-            <td class="num">₽ {{ item.price }}</td>
-            <td class="num">₽ {{ item.total_price }}</td>
-          </tr>
-        {% endwith %}
-      {% endfor %}
-        <tr class="total">
-          <td>Total</td>
-            <td colspan="4"></td>
-            <td class="num"> ₽ {{ cart.get_total_price }}</td>
+    <tbody>
+    {% for item in cart %}
+      {% with product=item.product %}
+        <tr class="body">
+          <td>
+            <a href="{{ product.get_absolute_url }}">
+              <img src="{% if product.image %}{{ product.image.url }}
+                          {% else %} {% static '#' %}{% endif %}">
+            </a>
+          </td>
+          <td>{{ product.name }}</td>
+          <td>
+           <form action="{% url 'cart:cart_add' product.id %}" method="post">
+                {{ item.update_quantity_form.quantity }}
+                {{ item.update_quantity_form.update }}
+                <input type="submit"  value="Обновить">
+                {% csrf_token %}
+            </form>
+          </td>
+          <td><a href="{% url 'cart:cart_remove' product.id %}">Очистить</a></td>
+          <td class="num">₽ {{ item.price }}</td>
+          <td class="num">₽ {{ item.total_price }}</td>
         </tr>
-      </tbody>
-    </table>
+      {% endwith %}
+    {% endfor %}
+      <tr class="total">
+        <td>Общая цена</td>
+          <td colspan="4"></td>
+          <td class="num"> ₽ {{ cart.get_total_price }}</td>
+      </tr>
+    </tbody>
+  </table>
   <p class="next">
-      <a href="{% url 'shop:product_list' %}" class="a"> Continue shopping</a>
-      <a href="{% url 'orders:order_create' %}"> Checkout</a>
+      <a href="{% url 'shop:product_list' %}" class="a"> Продолжить покупки</a>
+      <a href="{% url 'orders:order_create' %}"> Оформить заказ</a>
   </p>
 {% endblock %}
