--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -5,9 +5,9 @@
     Checkout
 {% endblock %}
 {% block content %}
-<h1 class="check">Checkout</h1>
+<h1 class="check">Оформить заказ</h1>
 <div class="order-info">
-        <h3>Your order</h3>
+        <h3>Ваш заказ</h3>
         <ul>
             {% for item in cart %}
             <li>
@@ -20,7 +20,7 @@
     </div>
     <form action="." method="post" class="order-form">
         {{ form.as_p }}
-        <p><input type="submit" value="Place order"></p>
+        <p><input type="submit" value="Разместить заказ"></p>
         {% csrf_token %}
     </form>
 {% endblock %}
