--- a/orders/templates/orders/order/created.html
+++ b/orders/templates/orders/order/created.html
@@ -2,13 +2,12 @@
 {% load static %}
 
 {% block title %}
-    Thank you
+    Спасибо
 {% endblock %}
 
 {% block content %}
 <div class="status">
-    <h1>Thank you</h1>
-    <p>Your order has been successfully completed. Your order number is
-    <strong>{{ order.id }}</strong></p>
+    <h1>Спасибо</h1>
+    <p>Ваш заказ был  успешно выполнен. Номер вашего заказа<strong>{{ order.id }}</strong></p>
 </div>
 {% endblock %}
