--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -1,5 +1,7 @@
 {% extends "shop/base.html" %}
 {% load static %}
+
+
 {% block title %}
     {% if category %}
         {{ category.name }}
@@ -8,31 +10,41 @@
 {% endblock %}
 
 {% block content %}
- <div id="sidebar">
-     <h3>Categories</h3>
-    <ul >
-         <li {% if not category %} class="selected" {% endif %}>
-            <a href="{% url 'shop:product_list' %}">All</a>
-         </li>
-         {% for c in categories %}
-         <li {% if category.slug == c.slug %}class="selected" {% endif %}>
-             <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
-         </li>
-         {% endfor %}
-     </ul>
+    <link  href="{% static '/css/list.css' %}" rel="stylesheet" />
+    <div id="sidebar">
+        <h2>Категории</h2>
+        <ul class="selected" >
+             <li {% if not category %} {% endif %}>
+                <a href="{% url 'shop:product_list' %}">Все</a>
+             </li>
+             {% for c in categories %}
+             <li {% if category.slug == c.slug %} {% endif %}>
+                 <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
+             </li>
+             {% endfor %}
+         </ul>
     </div>
     <div id="main" class="product-list">
-        <h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
+        <h1>{% if category %}{{ category.name }}{% else %}Продукты{% endif %}</h1>
         {% for product in products %}
         <div class="item">
-                <a href="{{ product.get_absolute_url }}">
-                    <img src="{% if product.image %}{{ product.image.url }}
-                        {%else %}{% static '#' %}{% endif %}">
-                </a>
-                <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
-                <br>
-                {{ product.price }} ₽
+            <a href="{{ product.get_absolute_url }}">
+                <img src="{% if product.image %}{{ product.image.url }}
+                    {%else %}{% static '#' %}{% endif %}">
+            </a>
+            <a href="{{ product.get_absolute_url }}">
+            </a>
+            <br>
+            <div class="name"><a href="{{ product.get_absolute_url }}">
+                {{ product.name }}<a/>
+            </div>
+            <p class="descrip">{{ product.description |truncatechars:50 }}</p>
+            <p class="price">{{ product.price }} ₽</p>
+            <form action="{{ product.get_absolute_url }}" method="post">
+                {% csrf_token %}
+                <input type="submit" value="Купить">
+            </form>
         </div>
         {% endfor %}
-</div>
+    </div>
 {% endblock %}
