--- a/orders/templates/orders/order/created.html
+++ b/orders/templates/orders/order/created.html
@@ -2,12 +2,12 @@
 {% load static %}
 
 {% block title %}
-    Спасибо
+    Finish
 {% endblock %}
 
 {% block content %}
 <div class="status">
     <h1>Спасибо</h1>
-    <p>Ваш заказ был  успешно выполнен. Номер вашего заказа<strong>{{ order.id }}</strong></p>
+    <p>Ваш заказ был  успешно выполнен. Номер вашего заказа <strong> {{ order.id }}</strong></p>
 </div>
 {% endblock %}
