--- a/pythonProject/mysite/blog/templates/blog/base.html
+++ b/pythonProject/mysite/blog/templates/blog/base.html
@@ -6,6 +6,7 @@
 <head>
   <title>{% block title %} {% endblock %}</title>
   <link href="{% static 'css/blog.css' %}" rel="stylesheet">
+
 </head>
 <body>
   <div id="content">
@@ -20,16 +21,14 @@
 
     <h3>Most commented posts</h3>
       {% get_most_commented_posts as most_commented_posts %}
-      <ul>
+    <ul>
         {% for post in most_commented_posts %}
           <li>
             <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
           </li>
         {% endfor %}
       </ul>
-
-    <p><a href="{% url 'blog:post_feed' %}">Subscribe to my RSS feedn
-    </a></p>
+    <a href="{% url 'blog:login' %}">Login</a>
   </div>
 </body>
 </html>
